2008-02-19  Sam Steingold  <sds@gnu.org>

	* utils/fix-perms.sh: all *.d are non-executable

2008-02-19  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (make-trampoline): use backquote for readability;
	bind *DENV* for DECLARED-OPTIMIZE in CREATE-FUN-OBJ
	(create-fun-obj): compute (DECLARED-OPTIMIZE 'SPACE) just once,
	not 3 times
	(c-REQUIRE): do not suppress load libfile message completely

2008-02-19  Sam Steingold  <sds@gnu.org>

	* macros3.lisp (compile-time-value): new exported user macro
	* compiler.lisp (c-COMPILE-TIME-VALUE): compile it
	(c-form-table): use c-COMPILE-TIME-VALUE for COMPILE-TIME-VALUE
	* foreign1.lisp (compile-time-value): remove broken definition

2008-02-15  Sam Steingold  <sds@gnu.org>

	* spvw.d, _clisp.c: remove the last vestiges of the -s command
	line option, removed on 2004-08-31

2008-02-14  Sam Steingold  <sds@gnu.org>

	* record.d (make_code_vector): converted from MAKE-CODE-VECTOR
	(make_closure): accept 7 keywords instead of 6 positional arguments;
	call make_code_vector on :CODE
	(make_constant_initfunction): update
	* subr.d, constsym.d (make_code_vector): remove
	* constsym.d (make_closure): rename from %MAKE-CLOSURE to MAKE-CLOSURE
	(Kcode, Kconstants, Kseclass, Klambda_list, Kdocumentation, Kjitc_p):
	add
	* subrkw.d (make_closure): add
	* eval.d (FUNTAB): remove make_code_vector
	* io.d (CLOSURE-READER): update the C_make_closure() call
	* compiler.lisp (make-closure): remove defun
	(create-fun-obj): update make-closure call

2008-02-14  Sam Steingold  <sds@gnu.org>

	* constobj.d (version): bump
	* constsym.d, subr.d, foreign.d (lookup_foreign_variable)
	(lookup_foreign_function, foreign_library_variable): remove legacy ABI
	* constsym.d, subr.d, foreign.d (open_foreign_library): renamed
	from foreign_library
	* foreign.d (open_library, update_library, check_library):
	remove legacy version argument
	* eval.d (FUNTAB): add cs_string_eq, cs_string_noteq, cs_string_less,